--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,15 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
+    <style name="Theme.App" parent="@android:style/Theme.Black.NoTitleBar">
         <!-- API 11 theme customizations can go here. -->
+    </style>
+
+    <style name="Theme.Boot" parent="@android:style/Theme.Black.NoTitleBar">
+        <item name="android:windowBackground">@color/transprency</item>
+        <item name="android:background">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <!--<item name="android:windowIsFloating">true</item>-->
     </style>
     <style name="Dialog" parent="android:style/Theme.Dialog">
         <item name="android:windowBackground">@color/transprency</item>
